WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129761
[MSE] Crash in SourceBuffer::sourceBufferPrivateDidReceiveSample() - received samples after SourceBuffer was removed.
https://bugs.webkit.org/show_bug.cgi?id=129761
Summary
[MSE] Crash in SourceBuffer::sourceBufferPrivateDidReceiveSample() - received...
Jer Noble
Reported
2014-03-05 15:30:47 PST
[MSE] Crash in SourceBuffer::sourceBufferPrivateDidReceiveSample() - received samples after SourceBuffer was removed.
Attachments
Patch
(2.26 KB, patch)
2014-03-05 15:33 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2014-03-05 15:33:03 PST
Created
attachment 225921
[details]
Patch
WebKit Commit Bot
Comment 2
2014-03-05 18:50:51 PST
Comment on
attachment 225921
[details]
Patch Clearing flags on attachment: 225921 Committed
r165160
: <
http://trac.webkit.org/changeset/165160
>
WebKit Commit Bot
Comment 3
2014-03-05 18:50:54 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug